WIP: Adding SKR E3 DIP 1.0 support

--- a/uCNC/src/hal/boards/stm32/stm32.ini
+++ b/uCNC/src/hal/boards/stm32/stm32.ini
@@ -76,6 +76,14 @@ board_upload.maximum_size = 1048576
 board_build.ldscript = uCNC/src/hal/mcus/stm32f4x/stm32f4x.ld
 build_flags = ${common_stm32.build_flags} -D BOARD=\"src/hal/boards/stm32/boardmap_srk_pro_v1_2.h\" -D HSE_VALUE=8000000 -D RAM_ONLY_SETTINGS -D CUSTOM_PRE_MAIN
 
+[env:STM32F4-SKR-E3-DIP-V1_0]
+extends = common_stm32
+board = genericSTM32F103RE
+board_build.offset  = 0x7000
+board_upload.offset_address = 0x08007000
+board_build.f_cpu = 168000000L
+build_flags = ${common_stm32.build_flags} -D BOARD=\"src/hal/boards/stm32/boardmap_skr_e3_dip_v1_0.h\"
+
 [env:STM32F4-Nucleo-F411RE-Shield-V3]
 extends = common_stm32
 board = nucleo_f411re
